--- a/demo/src/main/resources/static/fail.html
+++ b/demo/src/main/resources/static/fail.html
@@ -23,24 +23,15 @@
       <a class="a3" href="register.html">Register</a>
     </div>
   </div>
-  <div id="moviemain" class="main">
+  <div class="main">
 
-    <div class="title">Movie</div>
-    <div class="img"><img src="" alt="movie-image" height="60%" /></div>
-    <div id="snackbar">Some text some message..</div>
-    <div class="paragraph">
-      <h3 class="date">8998</h3>
-      <h3 class="type">Comedy</h3>
-      <p class="writer"></p>
-      <p class="actors"></p>
-      <p class="rating"></p>
-      <p class="plot"></p>
+  <h1 class="homeh1">Oups something went Wrong!</h1>
+  <a class="backtomain" href="index.html">Back to main page </a>
 
-    </div>
-    <footer id='moviefooter'>
-      @Powered by Dionysis & Alexandros
-    </footer>
   </div>
+  <footer >
+    @Powered by Dionysis & Alexandros
+  </footer>
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
